# graduate

./: CMakeLists.txt
include/: create_directory.hpp  define.hpp  keyboard_out.hpp  kinect.hpp
src/: create_directory.cpp  kinect.cpp  main.cpp
